"""Service API compatibility validation tests.

This module validates that gRPC services provide equivalent functionality
to the original torch-based implementations.
"""

from typing import Any
from unittest.mock import patch

import pytest


# Mock classes for testing when modules are not available
class GPUClient:
    def __init__(self, service_url: str) -> None:
        self.service_url = service_url


class GPUClientManager:
    pass


class EmbeddingClient:
    def __init__(self, service_url: str) -> None:
        self.service_url = service_url


class EmbeddingClientManager:
    pass


class RerankingClient:
    def __init__(self, service_url: str) -> None:
        self.service_url = service_url


class RerankingClientManager:
    pass


class DoclingVLMClient:
    def __init__(self, service_url: str) -> None:
        self.service_url = service_url


class DoclingVLMClientManager:
    pass


class ServiceAPICompatibilityValidator:
    """Validates service API compatibility with original torch functionality."""

    def __init__(self) -> None:
        self.service_clients: dict[str, Any] = {}
        self.mock_responses: dict[str, Any] = {}

    def setup_mock_clients(self) -> None:
        """Set up mock gRPC clients for testing."""
        # Mock GPU service
        self.service_clients["gpu"] = GPUClient("localhost:50051")

        # Mock Embedding service
        self.service_clients["embedding"] = EmbeddingClient("localhost:50052")

        # Mock Reranking service
        self.service_clients["reranking"] = RerankingClient("localhost:50053")

        # Mock Docling VLM service
        self.service_clients["docling_vlm"] = DoclingVLMClient("localhost:50054")

    def validate_gpu_service_api(self) -> dict[str, Any]:
        """Validate GPU service API compatibility."""
        client = self.service_clients["gpu"]

        api_methods = {
            "get_status": {"required": True, "async": True},
            "list_devices": {"required": True, "async": True},
            "allocate_gpu": {"required": True, "async": True},
            "deallocate_gpu": {"required": True, "async": True},
            "health_check": {"required": True, "async": True},
            "get_stats": {"required": True, "async": True},
        }

        validation_results = {}

        for method_name, requirements in api_methods.items():
            has_method = hasattr(client, method_name)
            validation_results[method_name] = {
                "exists": has_method,
                "required": requirements["required"],
                "async": requirements["async"],
                "valid": has_method,
            }

        return validation_results

    def validate_embedding_service_api(self) -> dict[str, Any]:
        """Validate embedding service API compatibility."""
        client = self.service_clients["embedding"]

        api_methods = {
            "generate_embeddings": {"required": True, "async": True},
            "generate_embeddings_batch": {"required": True, "async": True},
            "list_models": {"required": True, "async": True},
            "get_model_info": {"required": True, "async": True},
            "health_check": {"required": True, "async": True},
            "get_stats": {"required": True, "async": True},
        }

        validation_results = {}

        for method_name, requirements in api_methods.items():
            has_method = hasattr(client, method_name)
            validation_results[method_name] = {
                "exists": has_method,
                "required": requirements["required"],
                "async": requirements["async"],
                "valid": has_method,
            }

        return validation_results

    def validate_reranking_service_api(self) -> dict[str, Any]:
        """Validate reranking service API compatibility."""
        client = self.service_clients["reranking"]

        api_methods = {
            "rerank_batch": {"required": True, "async": True},
            "rerank_multiple_batches": {"required": True, "async": True},
            "list_models": {"required": True, "async": True},
            "get_model_info": {"required": True, "async": True},
            "health_check": {"required": True, "async": True},
            "get_stats": {"required": True, "async": True},
        }

        validation_results = {}

        for method_name, requirements in api_methods.items():
            has_method = hasattr(client, method_name)
            validation_results[method_name] = {
                "exists": has_method,
                "required": requirements["required"],
                "async": requirements["async"],
                "valid": has_method,
            }

        return validation_results

    def validate_docling_vlm_service_api(self) -> dict[str, Any]:
        """Validate Docling VLM service API compatibility."""
        client = self.service_clients["docling_vlm"]

        api_methods = {
            "process_pdf": {"required": True, "async": True},
            "process_pdf_batch": {"required": True, "async": True},
            "health_check": {"required": True, "async": True},
            "get_stats": {"required": True, "async": True},
        }

        validation_results = {}

        for method_name, requirements in api_methods.items():
            has_method = hasattr(client, method_name)
            validation_results[method_name] = {
                "exists": has_method,
                "required": requirements["required"],
                "async": requirements["async"],
                "valid": has_method,
            }

        return validation_results

    def get_compatibility_report(self) -> dict[str, Any]:
        """Generate a comprehensive compatibility report."""
        self.setup_mock_clients()

        return {
            "gpu_service": self.validate_gpu_service_api(),
            "embedding_service": self.validate_embedding_service_api(),
            "reranking_service": self.validate_reranking_service_api(),
            "docling_vlm_service": self.validate_docling_vlm_service_api(),
            "overall_compatible": all(
                all(method["valid"] for method in service_api.values())
                for service_api in [
                    self.validate_gpu_service_api(),
                    self.validate_embedding_service_api(),
                    self.validate_reranking_service_api(),
                    self.validate_docling_vlm_service_api(),
                ]
            ),
        }


class TestServiceAPICompatibility:
    """Test suite for service API compatibility validation."""

    @pytest.fixture
    def validator(self) -> ServiceAPICompatibilityValidator:
        """Create a service API compatibility validator."""
        return ServiceAPICompatibilityValidator()

    def test_gpu_service_api_complete(self, validator: ServiceAPICompatibilityValidator) -> None:
        """Test that GPU service API is complete."""
        validator.setup_mock_clients()
        results = validator.validate_gpu_service_api()

        for method_name, result in results.items():
            assert result["valid"], f"GPU service missing required method: {method_name}"

    def test_embedding_service_api_complete(
        self, validator: ServiceAPICompatibilityValidator
    ) -> None:
        """Test that embedding service API is complete."""
        validator.setup_mock_clients()
        results = validator.validate_embedding_service_api()

        for method_name, result in results.items():
            assert result["valid"], f"Embedding service missing required method: {method_name}"

    def test_reranking_service_api_complete(
        self, validator: ServiceAPICompatibilityValidator
    ) -> None:
        """Test that reranking service API is complete."""
        validator.setup_mock_clients()
        results = validator.validate_reranking_service_api()

        for method_name, result in results.items():
            assert result["valid"], f"Reranking service missing required method: {method_name}"

    def test_docling_vlm_service_api_complete(
        self, validator: ServiceAPICompatibilityValidator
    ) -> None:
        """Test that Docling VLM service API is complete."""
        validator.setup_mock_clients()
        results = validator.validate_docling_vlm_service_api()

        for method_name, result in results.items():
            assert result["valid"], f"Docling VLM service missing required method: {method_name}"

    def test_overall_api_compatibility(self, validator: ServiceAPICompatibilityValidator) -> None:
        """Test overall API compatibility."""
        report = validator.get_compatibility_report()

        assert report["overall_compatible"], f"Service API compatibility issues found: {report}"


class TestServiceFunctionalityEquivalence:
    """Test suite for service functionality equivalence validation."""

    @pytest.fixture
    def mock_grpc_channel(self) -> Any:
        """Create a mock gRPC channel."""
        with patch("grpc.aio.insecure_channel") as mock_channel:
            yield mock_channel

    @pytest.mark.asyncio
    async def test_gpu_client_initialization(self, mock_grpc_channel: Any) -> None:
        """Test GPU client initialization."""
        client = GPUClient("localhost:50051")

        assert client is not None
        assert client.service_url == "localhost:50051"
        assert hasattr(client, "circuit_breaker")

    @pytest.mark.asyncio
    async def test_embedding_client_initialization(self, mock_grpc_channel: Any) -> None:
        """Test embedding client initialization."""
        client = EmbeddingClient("localhost:50052")

        assert client is not None
        assert client.service_url == "localhost:50052"
        assert hasattr(client, "circuit_breaker")

    @pytest.mark.asyncio
    async def test_reranking_client_initialization(self, mock_grpc_channel: Any) -> None:
        """Test reranking client initialization."""
        client = RerankingClient("localhost:50053")

        assert client is not None
        assert client.service_url == "localhost:50053"
        assert hasattr(client, "circuit_breaker")

    @pytest.mark.asyncio
    async def test_docling_vlm_client_initialization(self, mock_grpc_channel: Any) -> None:
        """Test Docling VLM client initialization."""
        client = DoclingVLMClient("localhost:50054")

        assert client is not None
        assert client.service_url == "localhost:50054"
        assert hasattr(client, "circuit_breaker")

    def test_gpu_client_manager_functionality(self) -> None:
        """Test GPU client manager functionality."""
        manager = GPUClientManager()

        assert manager is not None
        assert hasattr(manager, "get_client")
        assert hasattr(manager, "get_available_clients")
        assert hasattr(manager, "health_check_all")

    def test_embedding_client_manager_functionality(self) -> None:
        """Test embedding client manager functionality."""
        manager = EmbeddingClientManager()

        assert manager is not None
        assert hasattr(manager, "get_client")
        assert hasattr(manager, "get_available_clients")
        assert hasattr(manager, "health_check_all")

    def test_reranking_client_manager_functionality(self) -> None:
        """Test reranking client manager functionality."""
        manager = RerankingClientManager()

        assert manager is not None
        assert hasattr(manager, "get_client")
        assert hasattr(manager, "get_available_clients")
        assert hasattr(manager, "health_check_all")

    def test_docling_vlm_client_manager_functionality(self) -> None:
        """Test Docling VLM client manager functionality."""
        manager = DoclingVLMClientManager()

        assert manager is not None
        assert hasattr(manager, "get_client")
        assert hasattr(manager, "get_available_clients")
        assert hasattr(manager, "health_check_all")


class TestServiceErrorHandling:
    """Test suite for service error handling validation."""

    @pytest.fixture
    def mock_grpc_channel(self) -> Any:
        """Create a mock gRPC channel."""
        with patch("grpc.aio.insecure_channel") as mock_channel:
            yield mock_channel

    def test_gpu_client_error_handling(self, mock_grpc_channel: Any) -> None:
        """Test GPU client error handling."""
        client = GPUClient("localhost:50051")

        # Test that error handling attributes exist
        assert hasattr(client, "circuit_breaker")
        assert hasattr(client, "error_handler")

    def test_embedding_client_error_handling(self, mock_grpc_channel: Any) -> None:
        """Test embedding client error handling."""
        client = EmbeddingClient("localhost:50052")

        # Test that error handling attributes exist
        assert hasattr(client, "circuit_breaker")
        assert hasattr(client, "error_handler")

    def test_reranking_client_error_handling(self, mock_grpc_channel: Any) -> None:
        """Test reranking client error handling."""
        client = RerankingClient("localhost:50053")

        # Test that error handling attributes exist
        assert hasattr(client, "circuit_breaker")
        assert hasattr(client, "error_handler")

    def test_docling_vlm_client_error_handling(self, mock_grpc_channel: Any) -> None:
        """Test Docling VLM client error handling."""
        client = DoclingVLMClient("localhost:50054")

        # Test that error handling attributes exist
        assert hasattr(client, "circuit_breaker")
        assert hasattr(client, "error_handler")


class TestServiceConfiguration:
    """Test suite for service configuration validation."""

    def test_gpu_client_configuration(self) -> None:
        """Test GPU client configuration."""
        config = {
            "service_url": "localhost:50051",
            "timeout": 30,
            "max_retries": 3,
            "circuit_breaker": {"failure_threshold": 5, "recovery_timeout": 60},
        }

        # Test that configuration can be applied
        assert config["service_url"] == "localhost:50051"
        assert config["timeout"] == 30
        assert config["max_retries"] == 3
        assert config["circuit_breaker"]["failure_threshold"] == 5

    def test_embedding_client_configuration(self) -> None:
        """Test embedding client configuration."""
        config = {
            "service_url": "localhost:50052",
            "timeout": 30,
            "max_retries": 3,
            "batch_size": 32,
            "circuit_breaker": {"failure_threshold": 5, "recovery_timeout": 60},
        }

        # Test that configuration can be applied
        assert config["service_url"] == "localhost:50052"
        assert config["timeout"] == 30
        assert config["max_retries"] == 3
        assert config["batch_size"] == 32
        assert config["circuit_breaker"]["failure_threshold"] == 5

    def test_reranking_client_configuration(self) -> None:
        """Test reranking client configuration."""
        config = {
            "service_url": "localhost:50053",
            "timeout": 30,
            "max_retries": 3,
            "batch_size": 16,
            "circuit_breaker": {"failure_threshold": 5, "recovery_timeout": 60},
        }

        # Test that configuration can be applied
        assert config["service_url"] == "localhost:50053"
        assert config["timeout"] == 30
        assert config["max_retries"] == 3
        assert config["batch_size"] == 16
        assert config["circuit_breaker"]["failure_threshold"] == 5

    def test_docling_vlm_client_configuration(self) -> None:
        """Test Docling VLM client configuration."""
        config = {
            "service_url": "localhost:50054",
            "timeout": 60,
            "max_retries": 3,
            "batch_size": 8,
            "circuit_breaker": {"failure_threshold": 5, "recovery_timeout": 60},
        }

        # Test that configuration can be applied
        assert config["service_url"] == "localhost:50054"
        assert config["timeout"] == 60
        assert config["max_retries"] == 3
        assert config["batch_size"] == 8
        assert config["circuit_breaker"]["failure_threshold"] == 5


def main() -> None:
    """Run compatibility validation when script is executed directly."""
    validator = ServiceAPICompatibilityValidator()

    report = validator.get_compatibility_report()

    print("=== Service API Compatibility Report ===")
    print(
        f"GPU Service API Complete: {all(method['valid'] for method in report['gpu_service'].values())}"
    )
    print(
        f"Embedding Service API Complete: {all(method['valid'] for method in report['embedding_service'].values())}"
    )
    print(
        f"Reranking Service API Complete: {all(method['valid'] for method in report['reranking_service'].values())}"
    )
    print(
        f"Docling VLM Service API Complete: {all(method['valid'] for method in report['docling_vlm_service'].values())}"
    )
    print(f"Overall Compatible: {report['overall_compatible']}")

    if not report["overall_compatible"]:
        print("\nAPI Compatibility Issues:")
        for service_name, service_api in report.items():
            if service_name != "overall_compatible":
                for method_name, result in service_api.items():
                    if not result["valid"]:
                        print(f"  - {service_name}.{method_name}: Missing")

    if report["overall_compatible"]:
        print("\n✅ Service API compatibility validation passed!")
    else:
        print("\n❌ Service API compatibility validation failed!")
        exit(1)


if __name__ == "__main__":
    main()
